--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | CoopGame</title>
+    <title>Unity WebGL Player | AstroDefense</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">CoopGame</div>
+        <div id="unity-build-title">AstroDefense</div>
       </div>
     </div>
     <script>
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgltest.loader.js";
+      var loaderUrl = buildUrl + "/testmulti.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgltest.data",
-        frameworkUrl: buildUrl + "/webgltest.framework.js",
-        codeUrl: buildUrl + "/webgltest.wasm",
+        dataUrl: buildUrl + "/testmulti.data",
+        frameworkUrl: buildUrl + "/testmulti.framework.js",
+        codeUrl: buildUrl + "/testmulti.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "GW",
-        productName: "CoopGame",
-        productVersion: "0.1",
+        companyName: "PRUGIDEN",
+        productName: "AstroDefense",
+        productVersion: "0.0.0.1",
         showBanner: unityShowBanner,
       };
 
@@ -88,14 +88,14 @@
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
+        // 
 
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1920px";
+        canvas.style.height = "1080px";
       }
 
       loadingBar.style.display = "block";
